--- a/views/nc-pendientes.ejs
+++ b/views/nc-pendientes.ejs
@@ -5,6 +5,95 @@
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.css" />
   <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
   <link rel="stylesheet" href="/clusterpies/clusterpies.css"/>
+
+<!--  utilizando leaflete 1.3 no permitia hacer clicks en iconos 
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+crossorigin=""/>
+
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+crossorigin=""></script>
+-->  
+    
+     
+
+
+     <script  src="/js/bootstrap-3.3.2.min.js"></script>
+
+
+     <script type="text/javascript" src='/js/bootstrap-multiselect.js'></script>
+     <link  rel="stylesheet" href="/css/bootstrap-multiselect.css"/>
+     <link  rel="stylesheet" href="/css/mapa.css"/>
+     
+     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      
+
+
+     <link rel="stylesheet" href="/label/libs/leaflet/leaflet.css" />
+<!--[if lte IE 8]><link rel="stylesheet" href="../libs/leaflet/leaflet.ie.css" /><![endif]-->
+<link rel="stylesheet" href="/label/dist/leaflet.label.css" />
+
+<script src="/label/libs/leaflet/leaflet-src.js"></script>
+
+<script src="/label/src/Label.js"></script>
+<script src="/label/src/BaseMarkerMethods.js"></script>
+<script src="/label/src/Marker.Label.js"></script>
+<script src="/label/src/CircleMarker.Label.js"></script>
+<script src="/label/src/Path.Label.js"></script>
+<script src="/label/src/Map.Label.js"></script>
+<script src="/label/src/FeatureGroup.Label.js"></script>
+  <style>
+    html,
+body {
+height: 100%;
+font-size: medium;
+}
+/*#mymap{width:1600px;height:800px} */
+#map{
+display: inline-block;
+height: 100%;
+width: 100%;
+
+}
+.column {
+display: inline;
+padding: 10px;
+height: 100%;
+
+
+}
+
+.left {
+width: 25%;
+}
+
+.right {
+width: 75%;
+}
+
+#yellow {
+height: 100%; 
+/*background: yellow; */
+
+}
+
+table{width:100%;}
+td{padding:24px; background:#eee;}
+
+/*Para que el header de la tabla sea fijo*/
+thead tr:nth-child(1) th{
+background: white;
+position: sticky;
+top: 0;
+z-index: 10;
+}
+ 
+</style>
+
+
+
 </head>  
 <body>
 <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.js" charset="utf-8"></script>
@@ -14,7 +103,7 @@
 <h2 style="margin:0;text-align:center;background-color: black ;color: white;"><%= (infoSupervisor['supervisor_id'] +" - " +infoSupervisor['supervisor_nombre']+" - "+infoSupervisor['supervisor_zona']).toUpperCase()%></h2>
 
 
-  <div id="map" />
+ 
 
 
   
@@ -59,7 +148,7 @@
 
     <div class="col-10 col-sm-10 col-md-10 col-lg-8 col-xl-8">
     
-      <div id="mymap"></div>
+      <div id="map" />
     </div>
   </div>
 </div>
