--- a/views/nc-pendientes.ejs
+++ b/views/nc-pendientes.ejs
@@ -6,7 +6,12 @@
   <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
   <link rel="stylesheet" href="/clusterpies/clusterpies.css"/>
 
-<!--  utilizando leaflete 1.3 no permitia hacer clicks en iconos 
+
+  <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.js" charset="utf-8"></script>
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+<!--  utilizando leaflete 1.3 no permitia hacer clicks en iconos , estos plugins son compatibles con 0.7
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
 integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
 crossorigin=""/>
@@ -14,16 +19,16 @@ crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
 integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 crossorigin=""></script>
--->  
+-->
+
     
      
 
 
-     <script  src="/js/bootstrap-3.3.2.min.js"></script>
+  
 
 
-     <script type="text/javascript" src='/js/bootstrap-multiselect.js'></script>
-     <link  rel="stylesheet" href="/css/bootstrap-multiselect.css"/>
+
      <link  rel="stylesheet" href="/css/mapa.css"/>
      
      <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
@@ -32,18 +37,18 @@ crossorigin=""></script>
 
 
      <link rel="stylesheet" href="/label/libs/leaflet/leaflet.css" />
-<!--[if lte IE 8]><link rel="stylesheet" href="../libs/leaflet/leaflet.ie.css" /><![endif]-->
-<link rel="stylesheet" href="/label/dist/leaflet.label.css" />
-
-<script src="/label/libs/leaflet/leaflet-src.js"></script>
-
-<script src="/label/src/Label.js"></script>
-<script src="/label/src/BaseMarkerMethods.js"></script>
-<script src="/label/src/Marker.Label.js"></script>
-<script src="/label/src/CircleMarker.Label.js"></script>
-<script src="/label/src/Path.Label.js"></script>
-<script src="/label/src/Map.Label.js"></script>
-<script src="/label/src/FeatureGroup.Label.js"></script>
+     <!--[if lte IE 8]><link rel="stylesheet" href="../libs/leaflet/leaflet.ie.css" /><![endif]-->
+     <link rel="stylesheet" href="/label/dist/leaflet.label.css" />
+     
+     <script src="/label/libs/leaflet/leaflet-src.js"></script>
+     
+     <script src="/label/src/Label.js"></script>
+     <script src="/label/src/BaseMarkerMethods.js"></script>
+     <script src="/label/src/Marker.Label.js"></script>
+     <script src="/label/src/CircleMarker.Label.js"></script>
+     <script src="/label/src/Path.Label.js"></script>
+     <script src="/label/src/Map.Label.js"></script>
+     <script src="/label/src/FeatureGroup.Label.js"></script>
   <style>
     html,
 body {
@@ -96,9 +101,15 @@ z-index: 10;
 
 </head>  
 <body>
+
+<!--
+Aquí si se carga el script de leaflet, dejará sin efecto el leaflet cargado arriba
 <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.js" charset="utf-8"></script>
 <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+-->
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
 
 <h2 style="margin:0;text-align:center;background-color: black ;color: white;"><%= (infoSupervisor['supervisor_id'] +" - " +infoSupervisor['supervisor_nombre']+" - "+infoSupervisor['supervisor_zona']).toUpperCase()%></h2>
 
@@ -382,8 +393,13 @@ var customLayer = L.geoJson(plantasGeoJSON, {
                 ,onEachFeature:function(feature,layer){
                     console.log("holaa")  
                     var label=`<p style='font-weight: bold;'>`+feature.properties.cenco2_codi+" "+feature.properties.name+`</p> <p> <br> Supervisor: `   +feature.properties.administrativo_nombre+`</p>`
-               // layer.bindPopup(label).openPopup(); 
-             //////////////////////////  layer.bindLabel(feature.properties.cenco2_codi, { noHide: true })   
+              //layer.bindPopup(label)
+          layer.bindLabel(feature.properties.cenco2_codi, { noHide: true })   
+             console.log("leyer",layer)
+
+            // layer.bindPopup(feature.properties.cenco2_codiL);
+ // layer.bindTooltip(feature.properties.cenco2_codi);
+
               }
                 
                 }).addTo(map);
