--- a/public/clusterpies/clusterpies.css
+++ b/public/clusterpies/clusterpies.css
@@ -11,7 +11,7 @@
   position: absolute;
   top: 3px;
   /*left: 780px;*/
-  margin: 10px;
+  margin-top: 40px;
   padding: 5px;
   border-radius: 5px;
   z-index: 100;
@@ -45,6 +45,7 @@
   font-weight: bold;
   font-family: sans-serif;
   fill: #ccc;
+  
 }
 
 /*Markers*/
