--- a/views/visitas-pendientes.ejs
+++ b/views/visitas-pendientes.ejs
@@ -3,15 +3,16 @@
 <head>
 <title>Page Title</title>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-crossorigin=""/>
 
-<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-crossorigin=""></script>
 
-    
+<!--
+
+la libreria se carga en label .js 
+<link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.css" />
+
+<script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.2/leaflet.js" charset="utf-8"></script>
+
+ -->
      
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 
@@ -19,8 +20,7 @@ crossorigin=""></script>
      
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
-     <script  src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
-     <link rel="stylesheet" href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' />
+ 
 
      <script  src="/js/bootstrap-3.3.2.min.js"></script>
 
@@ -49,7 +49,23 @@ crossorigin=""></script>
 <script src="/label/src/FeatureGroup.Label.js"></script>
 
 
-     
+
+
+<!-- 
+debido a que plugin de label ocupa leaflet 0.7 , todas  los plugins deben estar en 0.7
+es por ello que las librerias deben bajarse con la version correspondiente
+https://github.com/Leaflet/Leaflet.markercluster/tree/leaflet-0.7
+
+
+-->
+
+
+<link rel="stylesheet" href="/marker-cluster/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="/marker-cluster/dist/MarkerCluster.Default.css" />
+<script src="/marker-cluster/dist/leaflet.markercluster-src.js"></script>
+<script src="/marker-cluster/dist/leaflet.markercluster.js"></script>
+
+
      <style>
          html,
 body {
@@ -105,6 +121,10 @@ thead tr:nth-child(1) th{
     
 </head>
 <body>
+
+
+
+
 <!--
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
@@ -230,10 +250,13 @@ var infoSupervisor= JSON.parse('<%-JSON.stringify(infoSupervisor)%>')
 
 
 
+     
+
+
 
 var baseRadius=8
 var maxRadius=30
-
+/*
 
 
 
@@ -279,14 +302,53 @@ var customLayerVolumen = L.geoJson(getTest, {
                 
                 }).addTo(mymap);
 
+           */     
+
 
 //////////////// añade multicluster
 
 
 
 
+/*
+const markers = L.markerClusterGroup({zoomToBoundsOnClick: false});
+//[[-33.588008, -71.6105255],[-33.588008, -71.6105255],[-33.588008, -71.6105255],[-33.588008, -71.6105255],[-33.588008, -71.6105255]]
+getTest 
+.map(latLng => L.marker(latLng.geometry.coordinates))
+  .forEach(marker => markers.addLayer(marker));
+mymap.addLayer(markers);
+
+*/
 
 
+
+/*
+var geoJsonData = {
+			"type": "FeatureCollection", 
+			"features": [
+				{ "type": "Feature", "id":"1", "properties": { "address": "2"   }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255 ] } },
+				{ "type": "Feature", "id":"2", "properties": { "address": "151" }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255   ] } },
+				{ "type": "Feature", "id":"3", "properties": { "address": "21"  }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255     ] } },
+				{ "type": "Feature", "id":"4", "properties": { "address": "14"  }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255   ] } },
+				{ "type": "Feature", "id":"5", "properties": { "address": "38B" }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255 ] } },
+				{ "type": "Feature", "id":"6", "properties": { "address": "38"  }, "geometry": { "type": "Point", "coordinates": [-33.588008, -71.6105255 ] } }
+			]
+		};
+
+    */ 
+
+
+
+
+		var markers = L.markerClusterGroup();
+
+		var geoJsonLayer = L.geoJson(getTest, {
+			onEachFeature: function (feature, layer) {
+				layer.bindPopup(feature.properties.address);
+			}
+		});
+		markers.addLayer(geoJsonLayer);
+        mymap.addLayer(markers);
 
 
 ////////////
